# byceps

./: .dockerignore  .editorconfig  .env.example  .flaskenv  .gitignore  .readthedocs.yaml  .scrutinizer.yml  .travis.yml  AUTHORS.rst  Dockerfile  LICENSE  README.rst  app.py  app_metrics.py  babel.cfg  compose.yaml  docker-compose.yml  justfile  manage.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-development.txt  requirements-docs.txt  requirements-test.txt  requirements.txt  serve.py  serve_admin.py  serve_api.py  serve_apps.py  serve_site.py  setup.cfg  setup.py  tox.ini  worker.py
.github/workflows/: docker-build.yml  docker-test.sh  docker-test.yml  send-workflow-result-to-discord.py  test.yml
bootstrap/: authorization.py  board.py  helpers.py  util.py  validators.py
byceps/: app_dispatcher.py  application.py  application_factory.py  byceps_app.py  config.py  config_defaults.py  database.py  email.py  paypal.py  redis.py  typing.py  web_apps_dispatcher.py
byceps/announce/: announce.py  connections.py  events.py  helpers.py  visibility.py
byceps/blueprints/: admin.py  api.py  blueprints.py  common.py  site.py
byceps/cli/: cli.py
byceps/config/: apps.py  converter.py  defaults.py  errors.py  integration.py  models.py  parser.py  util.py
byceps/events/: auth.py  authn.py  authz.py  base.py  board.py  external_accounts.py  guest_server.py  news.py  newsletter.py  orga.py  page.py  shop.py  snippet.py  ticketing.py  tourney.py  user.py  user_badge.py
byceps/metrics/: application.py
byceps/permissions/: admin.py  api.py  authn.py  authorization.py  authz.py  board.py  brand.py  consent.py  gallery.py  guest_server.py  jobs.py  news.py  newsletter.py  orga.py  orga_presence.py  orga_team.py  page.py  party.py  seating.py  shop.py  site.py  snippet.py  ticketing.py  timetable.py  tourney.py  user.py  user_badge.py  webhook.py
byceps/services/: countries.py  email.py
byceps/signals/: auth.py  authn.py  authz.py  board.py  external_accounts.py  guest_server.py  news.py  newsletter.py  orga.py  page.py  shop.py  snippet.py  ticketing.py  tourney.py  user.py  user_avatar.py  user_badge.py
byceps/util/: authorization.py  authz.py  checkdigit.py  dateformat.py  datetime.py  export.py  forms.py  framework.py  image.py  instances.py  irc.py  iterables.py  jobqueue.py  l10n.py  money.py  navigation.py  result.py  sentry.py  system.py  templatefilters.py  templatefunctions.py  templating.py  turnstile.py  upload.py  user_session.py  uuid.py  views.py
config/: admin_dev.py  admin_prod.py  apps.toml.example  apps_example.toml  config-modern.toml.example  config.toml.example  config.toml.example-development  development-example.py  development-example.toml  development.py  development_admin.py  development_example.toml  development_party.py  docker.toml.example  example-site_dev.py  example-site_prod.py  production-example.py  production-example.toml  production.py  production.toml.example  production_party.py  site_prod.py  test.py  test_admin.py  test_party.py  test_site.py  testing.py  testing.toml
config/env/: development.py  development_admin.py  production.py  test.py  test_admin.py
docker/byceps/: config.toml.example
docker/nginx/: Dockerfile
docker/nginx-templates/: default.conf.template
docs/: Makefile  conf.py  index.rst  installation.rst  license.rst
docs/blueprints/: index.rst  seating.rst  seating_example_big.d2
docs/cli/: index.rst
docs/concepts/: authorization.rst  authorization_structure.d2  blueprints.rst  index.rst  scopes.rst  signals.rst
docs/config/: index.rst
docs/configuration_file/: index.rst
docs/installation/: apps-config-file.rst  byceps-config-file.rst  byceps.rst  database-tables.rst  debian-packages.rst  index.rst  populate-database.rst  postgresql.rst  requirements.rst  virtual-env.rst
docs/installation_docker/: index.rst
docs/installation_native/: apps-config-file.rst  byceps-config-file.rst  byceps.rst  debian-packages.rst  index.rst  populate-database.rst  postgresql.rst  python-dependencies.rst  requirements.rst  run.rst  virtual-env.rst
docs/running/: admin.rst  index.rst  site.rst  worker.rst
docs/shell/: index.rst
docs/testing/: index.rst
docs/upgrading/: database.rst  index.rst  python-packages.rst
requirements/: core.txt  dev.txt  docs.txt  test.txt
scripts/: README.rst  README.txt  _util.py  _validators.py  add_archived_attendance.py  announce_orga_birthdays.py  award_badge_to_user.py  cancel_overdue_orders.py  clean_up_after_deleted_users.py  copy_pages.py  copy_snippet.py  copy_snippets.py  create_board.py  create_database.py  create_database_tables.py  create_initial_admin_user.py  create_seating_area.py  create_shop.py  create_shop_sequences.py  create_terms_version.py  create_ticket_category.py  delete_old_user_login_events.py  delete_old_user_login_log_entries.py  export_permissions_and_roles.py  export_ticket_user_email_addresses.py  find_logins_for_ipaddress.py  generate_sql_to_delete_user.py  grant_board_access.py  import_permissions_and_roles.py  import_users.py  occupy_seat_group.py  promote_orga.py  remove_user_sessions.py  renew_user_sessions.py  search_pages.py  search_snippets.py  set_current_terms_version.py
scripts/data/: permissions_and_roles.json  permissions_and_roles.toml  roles.toml
sites/cozylan/: config_dev.py  extension.py
testfixtures/: authentication.py  authorization.py  board.py  brand.py  news.py  party.py  seating.py  shop.py  shop_article.py  shop_order.py  shop_sequence.py  shop_shop.py  snippet.py  ticketing.py  tourney.py  user.py  user_avatar.py  verification_token.py
testfixtures/shop/: order_export.xml
tests/: api_helpers.py  base.py  conftest.py  database.py  helpers.py  mocks.py
tests/api/: conftest.py  helpers.py
tests/blueprints/: test_homepage.py
tests/helpers/: __init__.py  shop.py
tests/integration/: conftest.py  database.py
webapp/: bootstraphelper.py  manage.py  requirements-development.txt  requirements-production.txt  requirements-test.txt  requirements.txt  serve.py  setup.py  tox.ini  worker.py
(+3715 files in other folders)
