[project]
name = "BYCEPS"
version = "0.0"
description = "LAN party web platform"
readme = "README.rst"
requires-python = ">=3.9"
license = { text = "Revised BSD License" }
authors = [ { name = "Jochen \"Y0Gi\" Kupperschmidt", email = "homework@nwsnet.de" } ]
keywords = [ "lanparty" ]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: German",
    "Programming Language :: JavaScript",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Topic :: Communications",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Message Boards",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary",
]

[project.scripts]
byceps = "byceps.cli.cli:cli"

[project.urls]
Website = "https://byceps.nwsnet.de/"
Documentation = "https://byceps.readthedocs.io/"
"Source Code" = "https://github.com/byceps/byceps"

[build-system]
requires = [ "setuptools" ]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 80
skip-string-normalization = true
target-version = [ "py39" ]

[tool.mypy]
python_version = "3.9"
plugins = "sqlalchemy.ext.mypy.plugin"
ignore_missing_imports = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-vv -ra"
testpaths = [ "tests/unit", "tests/integration" ]

[tool.ruff]
select = [
    "B",
    "E",
    "EXE",
    "F",
    "G",
    "ICN",
    "ISC",
    "PLE",
    "PLW",
    "PTH",
    "PYI",
    "Q",
    "RSE",
    "S",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    "E501",  # Line too long
    "W291",  # Trailing whitespace (because of email signature, `-- `)
]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.isort]
combine-as-imports = true
force-sort-within-sections = true
forced-separate = [ "tests" ]
lines-after-imports = 2
order-by-type = false

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [ "S101", "S105", "S106", "S107" ]

[tool.setuptools]
packages = [ "byceps" ]
