[metadata]
name = BYCEPS
version = 0.0
url = https://byceps.nwsnet.de/
author = Jochen "Y0Gi" Kupperschmidt
author_email = homework@nwsnet.de
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    License :: OSI Approved :: BSD License
    Natural Language :: German
    Programming Language :: JavaScript
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications
    Topic :: Games/Entertainment
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Message Boards
    Topic :: Internet :: WWW/HTTP :: Dynamic Content :: News/Diary
license = Modified BSD
license_file = LICENSE
description = LAN party web platform
long_description = file: README.rst
keywords = lanparty
platforms = any

[options]
zip_safe = False
python_requires = >=3.7
packages = find:
